# WindowMTSystem

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  WindowMTSystem.sln
Example1/: Example1.vcxproj  Example1.vcxproj.filters  iWindow.h  main.cpp
projects/Example1/src/: iWindow.hpp  main.cpp  resource.h
projects/Example2/: CMakeLists.txt
projects/Example2/src/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  WindowDimensions.hpp  WindowResources.hpp  iDevice.hpp  iWindow.hpp  logger.cpp  logger.hpp
projects/v1.0/: CMakeLists.txt
projects/v1.0/src/: iWindow.hpp  main.cpp
v1.0/: iWindow.h  main.cpp  v1.0.vcxproj  v1.0.vcxproj.filters
